{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 493,
  "lineage": "283b7a2f-e459-fb21-1ec9-e7909a1effff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "revent_api_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:listener/app/revent-api-lb/6c634a029caa9d26/44974f3525deb4c2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:targetgroup/revent-api-tg/071684e31389300d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:listener/app/revent-api-lb/6c634a029caa9d26/44974f3525deb4c2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:loadbalancer/app/revent-api-lb/6c634a029caa9d26",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.revent_api_tg",
            "aws_lb.revent_api_lb",
            "aws_security_group.revent_load_balancer_sg",
            "aws_subnet.revent_private_subnet_1",
            "aws_subnet.revent_private_subnet_2",
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "revent_app_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:listener/app/revent-app-lb/53b15882960c33c6/e52f329f9178e45a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:targetgroup/revent-app-tg/d20beff4d1277e4d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:listener/app/revent-app-lb/53b15882960c33c6/e52f329f9178e45a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:loadbalancer/app/revent-app-lb/53b15882960c33c6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.revent_app_tg",
            "aws_lb.revent_app_lb",
            "aws_security_group.revent_load_balancer_sg",
            "aws_subnet.revent_private_subnet_1",
            "aws_subnet.revent_private_subnet_2",
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "revent_nginx_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:listener/app/revent-nginx-lb/384218d294f1ce3d/7578c17b8de6ef92",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:targetgroup/revent-nginx-tg/7d9dd1447d012624",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:listener/app/revent-nginx-lb/384218d294f1ce3d/7578c17b8de6ef92",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:loadbalancer/app/revent-nginx-lb/384218d294f1ce3d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.revent_nginx_tg",
            "aws_lb.revent_nginx_lb",
            "aws_security_group.revent_load_balancer_sg",
            "aws_subnet.revent_public_subnet_1",
            "aws_subnet.revent_public_subnet_2",
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "revent_api_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:targetgroup/revent-api-tg/071684e31389300d",
            "arn_suffix": "targetgroup/revent-api-tg/071684e31389300d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/ping/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:targetgroup/revent-api-tg/071684e31389300d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "revent-api-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07849bdca60cdc826"
          },
          "dependencies": [
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "revent_app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:targetgroup/revent-app-tg/d20beff4d1277e4d",
            "arn_suffix": "targetgroup/revent-app-tg/d20beff4d1277e4d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/api/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:targetgroup/revent-app-tg/d20beff4d1277e4d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "revent-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07849bdca60cdc826"
          },
          "dependencies": [
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "revent_nginx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:targetgroup/revent-nginx-tg/7d9dd1447d012624",
            "arn_suffix": "targetgroup/revent-nginx-tg/7d9dd1447d012624",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/ping/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:targetgroup/revent-nginx-tg/7d9dd1447d012624",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "revent-nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07849bdca60cdc826"
          },
          "dependencies": [
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "revent_eip_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5c2704ffc5aa95d",
            "associate_with_private_ip": "10.0.0.5",
            "domain": "vpc",
            "id": "eipalloc-0f5c2704ffc5aa95d",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-220-19-205.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.220.19.205",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.revent_development_igw",
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "revent_development_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:550948748737:internet-gateway/igw-0ff28c1103f01ffa5",
            "id": "igw-0ff28c1103f01ffa5",
            "owner_id": "550948748737",
            "vpc_id": "vpc-07849bdca60cdc826"
          },
          "dependencies": [
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "revent_api_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:loadbalancer/app/revent-api-lb/6c634a029caa9d26",
            "arn_suffix": "app/revent-api-lb/6c634a029caa9d26",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-revent-api-lb-1445069861.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:loadbalancer/app/revent-api-lb/6c634a029caa9d26",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "revent-api-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a406a041151fba06"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09e4ed00604356e24"
              },
              {
                "subnet_id": "subnet-0a9e2804a11e6b4a3"
              }
            ],
            "subnets": [
              "subnet-09e4ed00604356e24",
              "subnet-0a9e2804a11e6b4a3"
            ],
            "vpc_id": "vpc-07849bdca60cdc826",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.revent_load_balancer_sg",
            "aws_subnet.revent_private_subnet_1",
            "aws_subnet.revent_private_subnet_2",
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "revent_app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:loadbalancer/app/revent-app-lb/53b15882960c33c6",
            "arn_suffix": "app/revent-app-lb/53b15882960c33c6",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-revent-app-lb-171368477.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:loadbalancer/app/revent-app-lb/53b15882960c33c6",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "revent-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a406a041151fba06"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09e4ed00604356e24"
              },
              {
                "subnet_id": "subnet-0a9e2804a11e6b4a3"
              }
            ],
            "subnets": [
              "subnet-09e4ed00604356e24",
              "subnet-0a9e2804a11e6b4a3"
            ],
            "vpc_id": "vpc-07849bdca60cdc826",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.revent_load_balancer_sg",
            "aws_subnet.revent_private_subnet_1",
            "aws_subnet.revent_private_subnet_2",
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "revent_nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:loadbalancer/app/revent-nginx-lb/384218d294f1ce3d",
            "arn_suffix": "app/revent-nginx-lb/384218d294f1ce3d",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "revent-nginx-lb-1654562748.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:550948748737:loadbalancer/app/revent-nginx-lb/384218d294f1ce3d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "revent-nginx-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a406a041151fba06"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b8a21428989c1075"
              },
              {
                "subnet_id": "subnet-0f2bd5abfef04c6a7"
              }
            ],
            "subnets": [
              "subnet-0b8a21428989c1075",
              "subnet-0f2bd5abfef04c6a7"
            ],
            "vpc_id": "vpc-07849bdca60cdc826",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.revent_load_balancer_sg",
            "aws_subnet.revent_public_subnet_1",
            "aws_subnet.revent_public_subnet_2",
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "revent_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5c2704ffc5aa95d",
            "association_id": "eipassoc-08dc82fc4b4e59a3c",
            "connectivity_type": "public",
            "id": "nat-0c003cf66c8d8f636",
            "network_interface_id": "eni-0bdaddbff0736dfa4",
            "private_ip": "10.0.1.10",
            "public_ip": "54.220.19.205",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b8a21428989c1075"
          },
          "dependencies": [
            "aws_eip.revent_eip_nat_gw",
            "aws_internet_gateway.revent_development_igw",
            "aws_subnet.revent_public_subnet_1",
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "revent_public_internet_igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ff28c1103f01ffa5",
            "id": "r-rtb-0b188458aa8fed94e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b188458aa8fed94e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.revent_development_igw",
            "aws_route_table.revent_public_route_table",
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "revent_route_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c88eb0626bc41fa91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c003cf66c8d8f636",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c88eb0626bc41fa9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.revent_eip_nat_gw",
            "aws_internet_gateway.revent_development_igw",
            "aws_nat_gateway.revent_nat_gw",
            "aws_route_table.revent_private_route_table",
            "aws_subnet.revent_public_subnet_1",
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "revent_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:550948748737:route-table/rtb-0c88eb0626bc41fa9",
            "id": "rtb-0c88eb0626bc41fa9",
            "owner_id": "550948748737",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07849bdca60cdc826"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "revent_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:550948748737:route-table/rtb-0b188458aa8fed94e",
            "id": "rtb-0b188458aa8fed94e",
            "owner_id": "550948748737",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07849bdca60cdc826"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "revent_private_route_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0132da6b3f76964",
            "route_table_id": "rtb-0c88eb0626bc41fa9",
            "subnet_id": "subnet-09e4ed00604356e24"
          },
          "dependencies": [
            "aws_route_table.revent_private_route_table",
            "aws_subnet.revent_private_subnet_1",
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "revent_private_route_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090070543c9f4542e",
            "route_table_id": "rtb-0c88eb0626bc41fa9",
            "subnet_id": "subnet-0a9e2804a11e6b4a3"
          },
          "dependencies": [
            "aws_route_table.revent_private_route_table",
            "aws_subnet.revent_private_subnet_2",
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "revent_public_route_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03118574debd1c1c0",
            "route_table_id": "rtb-0b188458aa8fed94e",
            "subnet_id": "subnet-0b8a21428989c1075"
          },
          "dependencies": [
            "aws_route_table.revent_public_route_table",
            "aws_subnet.revent_public_subnet_1",
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "revent_public_route_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec13b28d5b545ea7",
            "route_table_id": "rtb-0b188458aa8fed94e",
            "subnet_id": "subnet-0f2bd5abfef04c6a7"
          },
          "dependencies": [
            "aws_route_table.revent_public_route_table",
            "aws_subnet.revent_public_subnet_2",
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "revent_efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:550948748737:security-group/sg-0870a9a2441611636",
            "description": "Allow ECS to EFS communication",
            "egress": [],
            "id": "sg-0870a9a2441611636",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "EFS Security Group",
            "name_prefix": "",
            "owner_id": "550948748737",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07849bdca60cdc826"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "revent_load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:550948748737:security-group/sg-0a406a041151fba06",
            "description": "Security group for external load balancer serving Nginx",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a406a041151fba06",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load_balancer_security_group",
            "name_prefix": "",
            "owner_id": "550948748737",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07849bdca60cdc826"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "revent_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:550948748737:security-group/sg-01295bce6fab9d495",
            "description": "Allows inbound access from Fargate only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01295bce6fab9d495",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fcb610624a111121"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "550948748737",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07849bdca60cdc826"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.revent_load_balancer_sg",
            "aws_security_group.revent_tasks_sg",
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "revent_tasks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:550948748737:security-group/sg-0fcb610624a111121",
            "description": "Allows inbound access from the ALB and allows communication among tasks within the security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fcb610624a111121",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a406a041151fba06"
                ],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "ecs_fargate_security_group",
            "name_prefix": "",
            "owner_id": "550948748737",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07849bdca60cdc826"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.revent_load_balancer_sg",
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "revent_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:550948748737:subnet/subnet-09e4ed00604356e24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e4ed00604356e24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550948748737",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07849bdca60cdc826"
          },
          "dependencies": [
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "revent_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:550948748737:subnet/subnet-0a9e2804a11e6b4a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9e2804a11e6b4a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550948748737",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07849bdca60cdc826"
          },
          "dependencies": [
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "revent_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:550948748737:subnet/subnet-0b8a21428989c1075",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8a21428989c1075",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550948748737",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07849bdca60cdc826"
          },
          "dependencies": [
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "revent_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:550948748737:subnet/subnet-0f2bd5abfef04c6a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2bd5abfef04c6a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550948748737",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07849bdca60cdc826"
          },
          "dependencies": [
            "aws_vpc.revent_development_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "revent_development_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:550948748737:vpc/vpc-07849bdca60cdc826",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0537dfb377e62b026",
            "default_route_table_id": "rtb-0d935c321348fb724",
            "default_security_group_id": "sg-0cdd3d0712be3be8e",
            "dhcp_options_id": "dopt-06e3974aab6fa75e2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07849bdca60cdc826",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d935c321348fb724",
            "owner_id": "550948748737"
          }
        }
      ]
    }
  ]
}